# kg-rag-system

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/app/: __init__.py  main.py
backend/app/agents/: critic.py  graph_agent.py  planner.py  tools.py
backend/app/api/routes/: admin.py  graph.py  ingest.py  mcp.py  query.py
backend/app/core/: config.py  logging.py  security.py
backend/app/eval/: benchmark.py
backend/app/ingestion/: chunker.py  extractor.py  loaders.py  pipeline.py
backend/app/kg/: community.py  neo4j_client.py
backend/app/mcp/: server.py
backend/app/models/: schemas.py
backend/app/observability/: tracing.py
backend/app/retrieval/: embedder.py  graph_retriever.py  qdrant_store.py  reranker.py  router.py
backend/tests/: test_smoke.py
configs/: kg_schema_default.yaml  prompts.yaml
data/rag_kg_hongloumeng_v1/: README.md  baseline_demo_report.md  baseline_demo_summary.json  entity_alias.json  hongloumeng_fulltext.txt  manifest.json
data/sample/: README.md
docs/: ARCHITECTURE.md  EVAL.md  ROADMAP.md
frontend/: index.html  package.json  tsconfig.json
frontend/src/: main.tsx  styles.css
frontend/src/lib/: api.ts
frontend/src/pages/: Chat.tsx  EvalPanel.tsx  GraphExplorer.tsx  Ingest.tsx
infra/grafana/: dashboards.md
infra/helm/: Chart.yaml  values.yaml
infra/k8s/: backend.yaml  configmap.yaml  ingress.yaml  namespace.yaml  neo4j.yaml  qdrant.yaml  workers.yaml
infra/terraform/: main.tf
notebooks/: 01_exploration.ipynb
scripts/: build_kg_rag_dataset.py  kafka_worker.py  locustfile.py  seed_data.py  smoke_call_and_baseline_diff.py  validate_kg_rag_dataset.py
